<?xml version="1.0"?>
<package format="3">
  <name>custom_message</name>
  <version>0.0.0</version>
  <description>ROS2 custom message example</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
