<?xml version="1.0"?>
<package format="3">
  <name>pub_sub_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 Humble simple publisher and subscriber example</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
